// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RulesLibrary/> should render the rule library view 1`] = `
<div
  class="full-width overflow-auto"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/rules"
            >
              Rules
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            Rule Templates
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="headerContainer"
        >
          <div
            class="component mr-2"
          >
            <div
              class="wrapper input"
            >
              <span
                class="prefix"
              >
                <i
                  class="material-icons icon"
                >
                  search
                </i>
              </span>
              <input
                class="input"
                data-resizable="false"
                id="input-text-2"
                name="input-text-2"
                placeholder="Search rule templates..."
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 float-right ui-button-fill-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              Create Custom Rule
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="info container-fluid"
  >
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<RulesLibrary/> should render the rules library view 1`] = `
<div
  class="full-width overflow-auto"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/rules"
            >
              Rules
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            Rule Templates
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="headerContainer"
        >
          <div
            class="component mr-2"
          >
            <div
              class="wrapper input"
            >
              <span
                class="prefix"
              >
                <i
                  class="material-icons icon"
                >
                  search
                </i>
              </span>
              <input
                class="input"
                data-resizable="false"
                id="input-text-1"
                name="input-text-1"
                placeholder="Search rule templates..."
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 float-right ui-button-fill-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              Create Custom Rule
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="info container-fluid"
  >
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
  </div>
</div>
`;
